# rushlight

./: .gitignore  README.md  noxfile.py  paper.bib  paper.md  pyproject.toml
docs/docs/source/: acquire_data.rst  dcube.rst  proj_imag_classified.rst  rimage.rst  rushlight.rst  synth_tools.rst  tests.rst
docs/source/: about.rst  conf.py  dcube.rst  eg_aia_stereo_fetch.rst  eg_aia_stereo_pair.rst  eg_clb_loop.rst  eg_create_dummy_vol.rst  eg_synth_proj.rst  index.rst  install.rst  modules.rst  rimage.rst  rushlight.emission_models.rst  rushlight.rst  rushlight.user_notebooks.rst  rushlight.utils.rst  synth_tools.rst
docs/source/example_notebooks/: eg_synth_proj.rst
rushlight/emission_models/: uv.py  xrt.py
rushlight/user_notebooks/: aiastereo.py
rushlight/utils/: acquire_data.py  dcube.py  proj_imag.py  proj_imag_classified.py  rimage.py  synth_tools.py
tests/: test_brightness.py  test_sample.py
tests/reference_data/: maps_gm.h5
